// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSheetPendingDialog is rendered with status update 1`] = `
<div
  className="css-75dkqw-View-FlexBox-FlexColumn"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="css-t9ud5p-View-FlexBox-FlexColumn"
  >
    <div
      className="css-hs91vy-LoadingIndicator eq9prj20"
      size={30}
    />
    <span
      className="css-137ad86-Text"
      color="#6f6f6f"
    >
      Update
    </span>
  </div>
  <div
    className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
  >
    <div
      className="css-te359u-View-FlexBox-Spacer e13mj6h82"
    />
    <div
      className="css-xing9h-StyledButton enfqd40"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      Cancel
    </div>
    <div
      className="css-xing9h-StyledButton enfqd40"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="primary"
    >
      Run In Background
    </div>
  </div>
</div>
`;

exports[`ShareSheetPendingDialog is rendered without status update 1`] = `
<div
  className="css-75dkqw-View-FlexBox-FlexColumn"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="css-t9ud5p-View-FlexBox-FlexColumn"
  >
    <div
      className="css-hs91vy-LoadingIndicator eq9prj20"
      size={30}
    />
    <span
      className="css-137ad86-Text"
      color="#6f6f6f"
    >
      wubba lubba dub dub
    </span>
  </div>
  <div
    className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
  >
    <div
      className="css-te359u-View-FlexBox-Spacer e13mj6h82"
    />
    <div
      className="css-xing9h-StyledButton enfqd40"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      Cancel
    </div>
    <div
      className="css-xing9h-StyledButton enfqd40"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="primary"
    >
      Run In Background
    </div>
  </div>
</div>
`;
